# CRINGEPACK

./: .gitignore  Cargo.toml  README.md  copy.c  pyproject.toml  test.py  test_chol.py
matrices/: WGLight_A.npz  WGLight_b0.npy  WGLight_b1.npy  __init__.py  big.py  small.py
python/cringepack/: __init__.py  matrix.py  scipysolve.py  solver.py  testsmods.py  validate.py
python/cringepack/lib_cringepack.dylib.dSYM/Contents/: Info.plist
python/cringepack/lib_cringepack.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_cringepack.dylib.yml
src/: acc.rs  chol.rs  etree.rs  lib.rs  linsolve.rs  metisperm.rs  perm.rs  pmat.rs  sparse.rs  symbolic.rs
