[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[project]
name = "cringepack"
version = "0.1.0"
requires-python = ">=3.10"
description = "Complex Rust INefficient Gaussian Elimination Package"
readme = "README.md"
license = "MIT"
dependencies = [
    "scipy>=1.15.3",
]

[tool.maturin]
python-source = "python"
module-name = "cringepack._cringepack"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
